--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,7 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Install dependencies
+        run: yarn
       - name: Lint code
         run: yarn lint
