--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
-  "printWidth": 135,
   "tabWidth": 2,
   "trailingComma": "es5",
-  "semi": false,
-  "singleQuote": true,
+  "semi": true,
+  "singleQuote": false,
   "arrowParens": "always"
 }
