feat(app): restored content

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Lint code
         run: yarn lint
   build:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get code
