--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Install dependencies
+        run: yarn
       - name: Build
         run: yarn run build
       - name: Deploy to Firebase
