--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
-name: Test
-on: 
+name: Deploy to Firebase
+on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 jobs:
   # test:
@@ -23,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Build
-        run: yarn run build
+        run: yarn build
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
