--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,19 @@
 {
   "hosting": {
-    "source": ".",
+    "public": "out",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "functions": {
+    "source": ".",
+    "ignore": [
+      "firebase.json",
+      "node_modules",
+      "**/out"
+    ],
+    "runtime": "nodejs12"
   }
 }
