feat(app): restored content

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -24,8 +24,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Get code
+  #       uses: actions/checkout@v3
+  #     - name: Install dependencies
+  #       run: yarn
+  #     - name: Lint code
+  #       run: yarn lint
+        
   # Build job
   build:
+    # needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
