--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -24,15 +24,15 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Get code
-  #       uses: actions/checkout@v3
-  #     - name: Install dependencies
-  #       run: yarn
-  #     - name: Lint code
-  #       run: yarn lint
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: yarn
+      - name: Lint code
+        run: yarn lint
         
   # Build job
   build:
