--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -67,9 +67,9 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Build with Next.js
-        run: yarn next build
+        run: yarn build
       - name: Static HTML export with Next.js
-        run: yarn next export && touch out/.nojekyll
+        run: yarn export
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
