--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Build with Next.js
         run: yarn build
       - name: Static HTML export with Next.js
-        run: next export && > ./out/.nojekyll
+        run: yarn next export && > ./out/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
