ci(ci): bypassing Jekyll on GitHub Pages
Added .nojekyll file in the folder that contains the _next folder

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Build with Next.js
         run: yarn build
       - name: Static HTML export with Next.js
-        run: yarn next export && touch ./out/.nojekyll && > ./out/.nojekyll && touch out/.nojekyll && > out/.nojekyll && touch ./out/nojekyll
+        run: yarn next export && touch ./out/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
