ci(ci): bypassing Jekyll on GitHub Pages
Added .nojekyll file in the folder that contains the _next folder

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -24,19 +24,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Get code
-  #       uses: actions/checkout@v3
-  #     - name: Install dependencies
-  #       run: yarn
-  #     - name: Lint code
-  #       run: yarn lint
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: yarn
+      - name: Lint code
+        run: yarn lint
         
   # Build job
   build:
-    # needs: test
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -48,12 +48,12 @@ jobs:
           cache: yarn
       - name: Setup Pages
         uses: actions/configure-pages@v2
-        # with:
+        with:
           # Automatically inject basePath in your Next.js configuration file and disable
           # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
           #
           # You may remove this line if you want to manage the configuration yourself.
-          # static_site_generator: next
+          static_site_generator: next
       - name: Restore cache
         uses: actions/cache@v3
         with:
